--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
   },
   "dependencies": {
     "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/drawer": "^5.12.5",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "@rematch/core": "^2.0.1",
+    "@rematch/loading": "^2.0.1",
+    "@rematch/persist": "^2.0.1",
+    "@rematch/select": "^3.0.1",
     "axios": "^0.21.1",
     "react": "17.0.1",
     "react-native": "0.64.1",
